--- a/index.html
+++ b/index.html
@@ -1,20 +1,170 @@
-<!doctype html><
+
 <html> 
   
   <head> 
     <meta charset="utf-8">
-    <title>德里克.罗斯</title> 
+    <title>德里克.罗斯-NBA史上最年轻的MVP</title> 
   </head> 
   
  
   <body> 
-    <p></p> <a href="https://baike.baidu.com/item/%E5%BE%B7%E9%87%8C%E5%85%8B%C2%B7%E7%BD%97%E6%96%AF/2862891?fr=aladdin"><p align="center">德里克.罗斯</p><a href="" target=""></a>
+    <p></p> <a href="https://baike.baidu.com/item/%E5%BE%B7%E9%87%8C%E5%85%8B%C2%B7%E7%BD%97%E6%96%AF/2862891?fr=aladdin"><p align="center">德里克.罗斯</p><a href="" target=""></a><p><span style="font-size:35px;">德里克.罗斯</span> </p>
   </body> 
   <p>生涯及其介绍:德里克·罗斯（Derrick Rose），1988年10月4日出生于美国伊利诺伊州芝加哥，美国职业篮球运动员，司职控球后卫，绰号“风城玫瑰”，效力于NBA明尼苏达森林狼队。
 德里克·罗斯在2008年NBA选秀中于首轮第1顺位被芝加哥公牛队选中，新秀赛季当选NBA年度最佳新秀并夺得NBA全明星技巧挑战赛冠军，2009-10赛季入选NBA全明星替补阵容。2010-11赛季，22岁的罗斯荣膺NBA常规赛最有价值球员（MVP），成为NBA历史上最年轻的MVP，该赛季入选NBA最佳阵容一阵和NBA全明星赛首发阵容。2011-12赛季再度入选NBA全明星赛首发阵容。2016年6月23日被交易至纽约尼克斯队，2017年7月25日加盟克利夫兰骑士队，2018年3月9日加盟明尼苏达森林狼队。 [1-6] 
 2011年，NBA新劳资协议中增加“罗斯条款”，以使符合条件的优秀年轻球员能够更早地获得占据球队工资帽30%的顶薪合同。 [7] </p>
 <img src="https://gss3.bdstatic.com/-Po3dSag_xI4khGkpoWK1HF6hhy/baike/w%3D268%3Bg%3D0/sign=a4f11777a0345982c58ae29434cf5690/faedab64034f78f0c41a19f074310a55b3191c9b.jpg">
  <body> 
+  <a href="tel:911">联系方式：00000-666666</a>
+  <a href="mailto:2513809683@qq.com">邮箱：2513809683@qq.com</a>
+  <p>中文名:德里克·马特尔·罗斯
+    外文名:Derrick Martell Rose  别名: 风城玫瑰   国籍:美国   出生地:美国伊利诺伊州芝加哥     出生日期:1988年10月4日 毕业院校孟菲斯大学   身高:6英尺3英寸/1.91米   体重: 190磅/86公斤   运动项目:篮球   所属运动队:明尼苏达森林狼队 专业特点: 各方向速度、变向不减速、爆炸性 主要奖项:2009年NBA年度最佳新秀 
+2011年NBA史上最年轻的常规赛MVP 
+2011年NBA最佳阵容一阵 
+3届NBA全明星阵容（2010-12） 
+NBA全明星技巧挑战赛冠军 重要事件 2011年NBA出台罗斯条款 球衣号码 25号 NBA选秀 2008年第一轮第一位被公牛队选中</p>
+  <body>
+    <p><b>早年经历</b>
+     <body><p><span style="font-size:25px;">童年经历</span> </p>
+      <p>1988年，德里克·罗斯出生于芝加哥，很小的时候，罗斯在场上的篮球天赋就令他的哥哥们震惊。弟兄几个在附近球场切磋球技的日子里，往往是由哥哥们教授罗斯基本的篮球技法，而罗斯则在很短的时间内后来者居上。而受到家中三位酷爱篮球的哥哥们影响，罗斯年幼时便沉迷于本土球队芝加哥公牛。兄弟几个时常会要求罗斯训练控球、传球以及左右手投篮，这恰恰是受他们母亲的旨意，罗斯的母亲早就看出了小儿子的篮球天赋以及成为职业球员的潜质。<img class="picture" alt="年幼的罗斯" src="https://gss2.bdstatic.com/9fo3dSag_xI4khGkpoWK1HF6hhy/baike/s%3D220/sign=cb14d4fd8913632711edc531a18ea056/c8ea15ce36d3d5396ccb47e23987e950352ab019.jpg" style="width:161px;height:220px;">
+        <body> <body><p><span style="font-size:25px;">高中时期</span></p>尽管罗斯在念高一时便具备加入校队的实力，但主教练鲍勃·汉姆布里克有自己的选拔规则，因此罗斯直到年底才在队中获得一席之地。他在高中联赛首秀的表现可圈可点（砍下22分），这让到场的十多位球探看得目瞪口呆，但这仅仅只是初露光芒。
+高中时罗斯连续两年带领球队夺得州冠军，高中一年级时，场均得到18.5分4.7个篮板6.6次助攻2.1次抢断。高中二年级时，场均得到19.8分5.1个篮板8.3次助攻2.4次抢断。高中第三年，场均得到20.1分5.4个篮板8.7次助攻和2.6次抢断。高四赛季场均25.2分、9.1个篮板、8.8次助攻、3.4抢断 [9-10]  [11]  。率队挑翻全美第一的橡树山高中（这也是当年橡树山高中唯一一场败仗），个人得到28分9板8助。在芝加哥当地享有极高声誉，传球好防守强的特点让队友们都热爱跟他一起打球。 [8] 
+罗斯在高中生涯的最大自豪感莫过于让母校成为了芝加哥当地历史上第一支连续两年问鼎伊利诺斯州冠军的高中球队，而在他们卫冕的那个赛季，罗斯率队取得了33胜1负的惊人战绩。四年总战绩达到120胜12负。
+罗斯在高中时期以场均25.2分、9.1个篮板、8.8次助攻、.3.4抢断 [10-11]  ，而入选全美高中最佳阵容 [12]  。入选由《今日美国》、《Parade》杂志和《EA体育》联合评出的全美第一最佳阵容。入选乔丹（品牌）全美最佳阵容。被《芝加哥论坛报》选为2007年度伊利诺伊州篮球先生。由于是芝加哥本地人，因此自己成为第一位为家乡球队效力的NBA选秀状元。
+ <img class="" src="http://d.hiphotos.baidu.com/baike/s%3D220/sign=ef9b47dfa2c27d1ea1263cc62bd4adaf/42a98226cffc1e17b126794a4c90f603738de934.jpg" alt="德里克·罗斯" style="width:190px;height:220px;">
+ <body><p><span style="font-size:25px;">大学时期</span></p>
+  罗斯一家最终认定孟菲斯大学才是最佳的选择，得到了孟菲斯名帅约翰-卡利帕里的调教。并且在大一就率队打入NCAA决赛。罗斯并非一个纯粹的得分手，但是他一直被认为是纯粹的领袖。作为球队第一进攻发起者的同时承担外线防守屏障角色。 [13] 
+罗斯很快与得分后卫克里斯·道格拉斯-罗伯茨组建成了后卫线，后者场均能有20分进账两人仅仅配合了三周便已展现出天衣无缝的表现，而孟菲斯大学校队则以26战全胜的开季表现证明了实力，这也使他们自80年代以来第一次排在榜首，而最终的战绩则是33胜1负。道格拉斯·罗伯茨当之无愧地入选了全美大学最佳阵容，而作为一年级新生的罗斯也入选最佳阵容，他在该赛季场均贡献14.9分、4.7次助攻和4.5个篮板。罗斯还进入了鲍勃-库西奖以及约翰-伍登奖的最后入围名单。 [14] 
+罗斯在大学联赛中的防守和下快攻表现也相当出众，但即便如此，人们还是更加看好密歇根大学以及德州大学，这令罗斯在遇到他们时更具斗志。在于密歇根大学的比赛中，罗斯上半场便率队取得了30分的领先并在全场砍下27分，而德州大学的命运也十分悲惨，当家控卫D.J.奥格斯丁被罗斯守的只拿下16分并最终以18分的巨大差距落败。
+孟菲斯大学凭借着如此强悍的后场组合终于得以杀入决赛，他们原本有机会在常规时间锁定胜利，但罗斯在关键时刻错失罚球，而对方阵中的马里奥·查尔莫斯稳稳命中三分将比赛拖入加时并笑到了最后。或许是对自己的实力极度自信，罗斯有意提前参加NBA选秀，与此同时孟菲斯大学方面正在对他与另外两位队友涉嫌考试舞弊一事进行调查，校方最终没有找到确凿的证据并允许罗斯参加选秀。 [15]
+<body><p><b>NBA生涯</b>
+<body><p><span style="font-size:25px;">公牛时期</span></p>
+  2008-09赛季，罗斯在他的第一场NBA比赛就拿下了11分9次助攻的全面表现，在整个赛季中罗斯都保持着一如既往的稳定。 [8]  在所有一年级球员助攻榜上排名第一（场均6.3次），得分榜上排名第二（场均16.8分），场均上场37.0分钟还得到3.9个篮板。罗斯投篮命中率47.5%，罚球命中率78.8%。助攻在全部新秀中排名首位。德里克·罗斯参加了82场常规赛中的81场比赛。场均出战37分钟、贡献16.8分、助攻6.3次。场均得分和出场时间在也在全部新秀当中位居第二。在三项统计中进入公牛历史上所有新秀的前三，包括总得分（第三，1361分）、场均得分（第三，16.8分）和场均助攻（第三，6.3次）。罗斯连续十场得分上双追平了迈克尔-乔丹创造的新秀赛季连续得分纪录。 [16]  71次得分上双，包括32次至少得到20分。2009年2月15日，菲尼克斯全明星技巧挑战赛，罗斯以35.3秒的成绩成为第一个赢得技巧挑战赛的新人球员。并参与了新秀挑战赛，在新秀挑战赛中，得到4分和全队最多的7次助攻。 [8]  [17]  2009年4月9日，罗斯九次当选周最佳新秀 [18]  ，三次当选东部月最佳新秀（11月、12月和3月），17周占据最佳新秀的榜首位置。 [19]  2009年4月23日NBA官方宣布，德里克·罗斯以58分全票当选NBA最佳新秀阵容第一阵容 [20]  ，以111票当选NBA年度最佳新秀。 [1]  [21-23] 
+常规赛结束后在罗斯率领下，公牛队以东部第7的成绩挤进了季后赛。是2008年NBA选秀里唯一率队能进入季后赛的新人球员。在季后赛首战中帮助球队击败了卫冕冠军凯尔特人队。在那场比赛中，罗斯以36分追平了天勾贾巴尔1970年创造的NBA史上首场季后赛新秀得分最高纪录，并送出了11次助攻。 [24-26]  而且罗斯作为新人领军的公牛和2008年冠军凯尔特人战斗了7场。 [27-28] 
+2009-10赛季，德里克·罗斯场均砍下20.8分、3.8篮板和6.0助攻的表现，投篮命中率48.9%。 [29]  不过罗斯的二年级开季不顺，他在季前赛第一场弄伤了脚踝，导致缺席剩余的季前赛。罗斯参与了与圣安东尼奥马刺队的赛季首场比赛，在有限的时间内赢下比赛。但是整个11月罗斯都受到脚踝伤的困扰。2010年1月28日，德里克·罗斯第一次入选2010年NBA全明星赛，二年级新秀挑战赛，但要参加三项NBA全明星赛事，因疲惫而退出了新秀挑战赛。 [30]  成为1998年自迈克尔·乔丹之后公牛又一个全明星球员。全明星赛开赛这天(2010年2月14日)，罗斯仅仅21岁零133天，他成为了公牛队史上最年轻的全明星球员，打破了乔丹在1985年保持的21岁零359天的纪录。 [31]  在他的第一场全明星赛上，罗斯拿下8分，4助攻和3个抢断。常规赛结束后公牛以41胜41负的战绩再次进入季后赛。整个季后赛，罗斯场均拿下26.8分和7.2个助攻。2010年4月13日，罗斯在对阵凯尔特人时拿下职业生涯新高39分，其中投篮22中15，罚球10中9。 [32]  据2010年1月的ESPN报道，罗斯的球衣销量全联盟第四。 [33] 
+2010年1月5日，罗斯当选周最佳球员。场均贡献26.7分，5.0个篮板和5.7次助攻，帮助公牛取得了3胜0负的佳绩。1月3日对阵魔术，罗斯独揽30分，6个篮板和7次助攻。而他也成为自2008年辛里奇之后，公牛队中首个单场砍下30分，并有5个篮板和5次助攻以上表现的球员。 [34] 
+2010年1月19日，罗斯当选周最佳球员，场均贡献27.3分，除此之外还能送出6.8次助攻和5.3个篮板。在上周六赢下热火的比赛中，罗斯砍下34分，并送出8次助攻。过去的一周，罗斯在罚球方面29罚28中，命中率达到96.6%。 [35] 
+2010年4月18日，罗斯当选月最佳球员。在4月份的比赛中，罗斯场均可以贡献25.4分和4.1个篮板和7次助攻，在4月13日的比赛中，罗斯贡献了职业生涯新高的39分，此外贡献了7次助攻、5个篮板、3次封盖的全面表现。其中7场比赛贡献20+，在最后三场比赛更是有场均30.6分的惊艳表现。 [36] 
+2010年11月，罗斯当选月最佳球员。他本人有着场均26.6分、4.6篮板和8.2助攻的优秀表现。在公牛阵中，罗斯10次成为得分王，而且6次拿到30+得分 [37] 
+公牛时期
+公牛时期(20张)
+2010年11月16日，罗斯当选周最佳球员，率领公牛以三连胜结束本周的比赛，在这三场比赛中，罗斯场均得到21.3分。除此之外，罗斯还在本周一共贡献了27次助攻，其中有13次是在对阵勇士。那场比赛，罗斯得到22分，13次助攻的两双，而这也已经是他本赛季得到的第三次两双。 [38] 
+2010-11赛季，德里克·罗斯场均砍下25.0分，篮板4.1，助攻7.7的表现，他也成为了NBA历史上第七位在一个赛季里能够场均贡献25分7.7次助攻4个篮板以上数据的球员。罗斯2011赛季总得分为2026分，总助攻和篮板为660次和330个，他成为历史上第五位单赛季能够在得分，助攻和篮板方面完成“
+2000+600+300”的球员。 [39]  2010年10月30日，在2011赛季公牛的第二场比赛中，罗斯追平自己职业生涯新高的39分，带领球队101-91战胜底特律活塞队。2天后，罗斯又贡献13个助攻， [40]  帮助罗尔·邓拿下职业生涯最高的40分，并战胜波特兰开拓者队。12月10号，罗斯拿下29分9助，带领公牛自2006年12月19日后首次战胜湖人。 [41]  2011年1月18日，罗斯砍下22分12助攻10篮板的三双（生涯第一次），率领公牛96-84击败灰熊。 [42]  2011年2月18日，罗斯在与全联盟第一的马刺队的比赛中得到生涯新高42分，并且得到8个助攻5个篮板，帮助公牛队以109-99取得胜利，与此同时，罗斯也是除乔丹之外近25年里唯一一位能够在马刺头上砍下40+的公牛球员，飞人在近25年里一共4次对马刺拿到40+，最高分是1990年对马刺拿到的44分，飞人这四次对马刺拿到40+，公牛全部以失利而告终，而如今罗斯拿到这一分数的基础上带队取胜 [43]  。 [44]  2011年3月27日，罗斯在对阵密尔沃基雄鹿队的比赛中砍下30分17助攻 [45]  ，帮助球队以95-87获胜，同时助攻数创下生涯新高。带领公牛以62胜20负成为了全联盟第一常规赛战绩。这也是乔丹之后20年以来公牛首次常规赛第一。 [46] 
+2011年5月，罗斯当选NBA最佳阵容第一阵容。 [12] 
+2011年1月20日，罗斯当选周最佳。场均拿下26.2分、7.8次助攻和6.2个篮板，在力克热火的比赛中，罗斯拿下34分，之后面对灰熊，罗斯送出三双。 [47] 
+2011年1月28日，罗斯以191万票数入选2011NBA全明星赛。 [48] 
+2011年罗斯当选3月最佳球员。罗斯在3月里书写了单场得分和助攻两项个人生涯新高纪录。与步行者队一役他收获42分，与雄鹿队一战他助攻达17次。他是全联赛唯一在场均得分（25分，第七）和助攻（7.9次，第十）两项十强榜都入围的球员。 [49] 
+2011年5月4日，NBA官网正式宣布了常规赛MVP的归属。在来自121位北美地区的篮球记者和解说员的评选中，德里克·罗斯连续11周在MVP榜排第一， [50]  力压奥兰多魔术的霍华德等球星获此殊荣。
+最年轻MVP（22岁）
+最年轻MVP（22岁）
+罗斯获得了113张第一选择票，得到了总计1182分的高分，以压倒性的优势荣获该类奖项，罗斯是2006年以来史蒂夫·纳什获得MVP后，第一位赢得这一奖项的控球后卫。 [51]  22岁的罗斯超越了此前23岁时获MVP奖项的传奇巨星昂赛尔德，成为历史上最年轻的获得这一奖项的球员。 [39] 
+2011年12月，德里克·罗斯与公牛完成续约，双方签订了一份总价值9400万美元为期五年的续约合同。因为“罗斯条款” [52]  ，他要比其他球员多拿1100万美元左右。2011-12赛季，这赛季劳资停摆，由于打球过拼，罗斯遇到了严重的伤病困扰，常规赛出战36场。这赛季罗斯表现同样强势，场均拿下21.8分、3.4个篮板、7.9次助攻。带领公牛连续第二赛季获得联盟常规赛第一。 [53] 
+2011-12赛季，年度球衣销售排行榜上，罗斯压科比、詹姆斯和年度最佳人物林书豪等，荣获球员全球销售冠军。在罗斯的带领下，公牛也成为联盟球衣销售最多的球队。 [54] 
+2012年1月17日，罗斯当选周最佳。公牛队取得了五战全胜的战绩，罗斯场均出场38.8分钟，场均贡献24分和9.3次助攻。公牛队取得五连胜之后总战绩达到12胜2负，85.7%的胜率让他们再次排名联盟第一。 [55] 
+2012年2月3日，罗斯以151万票数入选2012年NBA全明星首发阵容。 [56] 
+2012年3月6日，德里克-罗斯在过去一周比赛当中场均贡献28.8分、7.5次助攻和1.75次抢断，帮助公牛队在过去一周时间当中取得了四战全胜的战绩。过去一周公牛队所获得的四场胜利当中有三场都是在客场作战。罗斯领衔的公牛队本赛季的客场战绩是17胜6负，客场胜率高达73.9%，排名全联盟之首。 [57] 
+2012年4月29日，在NBA季后赛揭幕战当中，东部排名第一的公牛主场迎战位居第八位的76人，公牛凭借最后一节的出色发挥将对手的防线击溃，最终以103-91轻取76人，公牛在总比分上以1-0领先76人。公牛球星罗斯在第四节的垃圾时间里依然留在场上，却因此意外受伤离场，随后公牛宣布罗斯交叉韧带撕裂，季后赛报销。罗斯倒下前送出23+9+9。 [58] 
+2012年4月29日，公牛与76人季后赛第一场，罗斯在比赛最后的一次突破让自己意外受伤，导致左膝前十字韧带撕裂，赛季报销。但是由于伤病的侵扰导致，罗斯退出了MVP的竞争，无缘蝉联MVP。
+2012年5月11日，NBA季后赛公牛客场以78-79惜败76人，以总比分2-4被淘汰。缺少牛头罗斯，作为常规赛战绩最好的球队，公牛在首轮被第八号种子“黑八”。 [59] 
+2010年1月16日，公牛经过两个加时，以121-119两分胜奇才，罗斯拿下全场最高分37分9板6助，并在终场前投中制胜球。 [60] 
+2010年1月23日，菲尼克斯太阳队坐镇主场迎战芝加哥公牛队，最终公牛以115-104拿下太阳。罗斯32分5次助攻。 [61] 
+2010年4月14日，芝加哥公牛主场以101-93战胜波士顿凯尔特人。德里克-罗斯22投15中，罚球10罚9中，砍下全场最高分39分，5个篮板和7次助攻，外加3次封盖。 [62] 
+2010年10月31日，公牛主场迎战活塞。一番激战，公牛101-91力克对手，罗斯砍下39分6篮板7助攻2抢断2封盖。 [63] 
+2010年11月2日，在连续两场拿到高分并且站上了得分榜首位之后，罗斯上场了36分钟，11投6中得到了16分5个篮板13个助攻，最终帮助公牛毫无悬念的以110-98的比分战胜了此前不败的开拓者队。 [40] 
+2010年11月12日，勇士在客场挑战芝加哥公牛。公牛自始获得35分的领先，最终他们以120-90屠杀勇士。德里克-罗斯送出22分、2封盖、13次助攻。 [64-65] 
+2010年11月17日，火箭队回到主场丰田中心迎战公牛队。最终以92-95负于公牛，这也是火箭连续第4场输给公牛。德里克-罗斯在关键第四节轰下17分，全场送出33分7次助攻 [66]  。
+2010年11月25日，公牛客场两加时123-115力克太阳，完成20分大逆转。罗斯成为比赛的关键先生，加时赛贡献11分，全场送出35分7次助攻12板。 [67] 
+2010年11月28日，国王坐镇萨克拉门托，迎战芝加哥公牛。公牛罗斯得到30分7个篮板7次助攻。上半场国王领先13分，罗斯率领公牛下半场追上国王，率领公牛96-85逆转国王，第四节关键时刻罗斯连中制胜球。 [68] 
+2010年12月5日上午，火箭客场背靠背对阵公牛，在前三节长时间落后的情况下，火箭末节反扑并一度建立胜势，但却因罚球不利错过好局；罗斯压哨远投将比赛拖入加时，并最终率领公牛119-116奏凯。罗斯送出30分7篮板11助攻5抢断。 [69] 
+2010年12月11日，洛杉矶湖人在客场以84-88不敌公牛。德里克-罗斯拿下了29分5个篮板9次助攻。 [70]  [71] 
+2011年1月16日，迈阿密热火客场挑战芝加哥公牛，热火96-99不敌公牛，公牛队的德里克-罗斯34分4篮板8助攻。 [72-73] 
+2011年1月18日，公牛96-84灰熊；公牛大将卡洛斯-布泽尔缺阵，但客场轻取灰熊；德里克-罗斯贡献22分、12次助攻、10个篮板。 [42] 
+2011年1月29日，罗斯虽然身患急性肠胃炎，但是依然带病出战，送出22分6篮板12助攻。99-90杀退魔术，公牛取得四连胜。 [74] 
+2011年2月3日，罗斯32分和11次助攻带动球队，他们在客场以106-88拿下洛杉矶快船队，终结快船队的主场九连胜。 [75] 
+2011年2月18日，公牛以109比99击败排名联盟第一的马刺，罗斯拿下了42分5个篮板和8次助攻，在关键第四节一人砍下13分，帮助公牛锁定胜局。 [44]  与此同时，罗斯也是除乔丹之外近25年里唯一一位能够在马刺头上砍下40+的公牛球员，飞人在近25年里一共4次对马刺拿到40+，最高分是1990年对马刺拿到的44分，飞人这四次对马刺拿到40+，公牛全部以失利而告终，而如今罗斯拿到这一分数的基础上带队取胜。 [43] 
+2011年3月1日，公牛队的罗斯得到21分5板9助和3次抢断，他们在客场以105-77击败华盛顿奇才队，连续四次击败奇才队。 [76] 
+2011年3月19日，公牛带着8连胜的气场，凭借罗斯一己之力，公牛赶超对手20分优势，将比赛拖入加时。 [77]  罗斯送出42分1次封盖。 [78] 
+2011年3月23日，公牛客场以114-81，33分的巨大优势屠杀老鹰，并重新夺回榜首的位置。尽管老鹰排名东部第五，但在罗斯面前显得不堪一击，双方在比赛中甚至一度相差40分之多。罗斯本场比赛投中了6个三分，打破了职业生涯单场三分球命中数纪录。罗斯30分10助攻。 [79] 
+2011年3月27日，公牛队在客场以95-87逆转雄鹿，从而完成对后者的横扫，罗斯17投9中，罚球12罚12中，得到30分17次助攻。 [45] 
+2011年4月3日，多伦多猛龙队客场106-113不敌芝加哥公牛队。三连胜的公牛继续稳坐联盟冠军的宝座。德里克-罗斯得到全场最高的36分3篮板3封盖10助攻。 [80]  [81] 
+2011年4月8日，公牛主场97-81战胜凯尔特人，取得5连胜。公牛以58胜20负的战绩继续保持联盟第一，领先其后的凯尔特人和热火4个胜场，这也将是乔丹时代以后公牛取得的首个东部冠军。公牛队的德里克-罗斯全场得到30分5篮板8助攻。 [82] 
+2011年4月11日，公牛(60胜20负)102-99击败魔术(50胜30负)，继续巩固着东部第一，罗斯17投13中拿下39分5助攻。 [83] 
+2011年4月13日，公牛在客场挑战尼克斯。在德里克-罗斯的带领下，公牛在第三节打出一波26-2的进攻高潮，从而逆转局势并最终以103-90获得胜利。罗斯在本场比赛中得到26分，2011赛季的得分就突破2000分大关，成为公牛队史第三人。 [84] 
+2011年4月17日，公牛主场以104：99逆转战胜步行者，公牛罗斯，罚球21投19中得到39分6个篮板6次助攻3封盖。NBA联盟最近20年，能在季后赛打出造罚球20+的后卫，总共也不过乔丹、约翰逊、科比和韦德4人。 [85] 
+2011年5月7日，芝加哥公牛在客场挑战亚特兰大老鹰队，这是两队东部半决赛第三场较量。罗斯27投16中（三分球7投4中）砍下44分，创个人季后赛生涯单场得分新高，罗斯44分5个篮板7次助攻。罗斯在首节10投7中轰下17分，第三节轰下13分。 [86] 
+2011年12月26日圣诞大战中，最终公牛在斯台普斯中心以88-87战胜了主场作战的洛杉矶湖人队，公牛队的当家球星德里克-罗斯全场13投9中拿下22分和5次助攻，罗斯本场比赛的3分命中率6投4中。以一记抛投绝杀湖人。 [87] 
+2011年12月31日，芝加哥公牛客场战快船，以114-101拿下快船。德里克-罗斯全场14投8中，三分球4中3，贡献29分8个篮板16次助攻。 [88] 
+2012年1月2日，公牛在主场以104比64狂胜灰熊40分，取得三连胜。全场比赛，罗斯上场三节，也有16分和6次助攻入账，在他的带领下，公牛从一开始就掌控了比赛主动权。 [89] 
+2012年1月7日，公牛客场97-83击败魔术，公牛豪取六连胜。带伤出战的罗斯贡献21分、8个篮板、10次助攻。公牛取得六连胜。 [90] 
+2012年1月11日，德里克-罗斯贡献31分和11次助攻，他们在客场以111-100击败明尼苏达森林狼队。罗斯拿到31分11次助攻，这也是他生涯第7次拿到30+10，追平了盖伊-罗杰斯成为公牛队史30+10第二多的人物。 [91] 
+2012年1月15日，芝加哥公牛队延续连胜势头。公牛队的罗斯得到18分、11个篮板、4次助攻和3次抢断，带领全队5人上双，公牛队77-64击败多伦多猛龙队，公牛队取得五连胜，继续领跑东部。 [92] 
+2012年1月30日，公牛在客场93比97热火。全场比赛，罗斯共出战45分钟，贡献了全队最高的34分另有6个篮板6次助攻1个抢断和1次封盖。 [73] <img class="" src="http://c.hiphotos.baidu.com/baike/s%3D220/sign=decafa0acdef7609380b9e9d1edca301/48540923dd54564e40661aaeb5de9c82d1584f22.jpg" alt="最年轻MVP（22岁）" style="width:151px;height:220px;">
+2012年1月31日，公牛客场98-88轻取奇才，罗斯全场拿下35分8次助攻，保持对后者7连胜。 [93] 
+2012年2月3日，德里克-罗斯得到32分4个篮板13次助攻，其中有15分来自比赛的末节，公牛队在客场以105-102击败纽约尼克斯队。 [94] 
+2012年2月5日，公牛队在客场以113-90轻取密尔沃基雄鹿队，罗斯得到26分7个篮板13次助攻1封盖。 [95] 
+2012年3月1日，芝加哥公牛队（29胜8负）在客场延续胜势。德里克-罗斯拿到全场最高29分4助攻。公牛队在客场以96-89击败圣安东尼奥马刺队（24胜11负）。 [96] 
+2012年3月5日，公牛在客场96-91赢下76人，公牛取得六连胜，罗斯得到35分8次助攻，比赛中罗斯贡献了两记压哨球和一记关键球。 [97] 
+2012年3月8日，公牛以106-104险胜雄鹿，德里克-罗斯后撤步跳投压哨绝杀，收获八连胜，同时以33胜8负的战绩继续霸占联盟头名位置。罗斯拿下30分8篮板11助攻。 [98] 
+2012年3月11日，罗斯13投7中，得到24分13助攻，公牛以111-97击败爵士。 [99] <img class="" src="http://f.hiphotos.baidu.com/baike/s%3D220/sign=b83031621d38534388cf8023a313b01f/9c16fdfaaf51f3de39957b6a99eef01f3a29799d.jpg" alt="罗斯伤病缠身" style="width:127px;height:220px;">
+2012年3月13日，公牛104-99尼克斯，取得2连胜的同时送给对手6连败。罗斯32分6篮板7助攻。 [100] 
+2012年4月29日，在NBA季后赛揭幕战当中，公牛球星罗斯23分9篮板9助攻，联盟排名第一的公牛主场迎战位居第八位的76人，公牛凭借最后一节的出色发挥将对手的防线击溃，最终以103-91轻取76人，公牛在总比分上以1-0领先76人。但是他在比赛进入垃圾时间之后继续留在场上，结果导致在还有1分10秒时膝盖意外扭伤离场。 [101] 
+2012-13赛季，罗斯正式缺席了整个赛季。 [102] 
+2013年11月1日，依靠罗斯在终场前5.2秒的抛投绝杀，公牛队以82-81击败尼克斯，取得赛季第一场胜利。罗斯18分3助攻6篮板。 [103] 
+2013-14赛季，罗斯回归公牛队。整个赛季为公牛队打了10场球，场均出场31.1分钟有15.9分4.3助攻3.2篮板入账。2013年11月24日，在对阵开拓者的比赛中，德里克·罗斯右膝半月板撕裂，缺席了剩下赛季剩下的所有比赛。 [26] <img class="picture" alt="公牛时期" src="https://gss1.bdstatic.com/9vo3dSag_xI4khGkpoWK1HF6hhy/baike/s%3D220/sign=dc05f62b9a0a304e5622a7f8e1c8a7c3/34fae6cd7b899e512ea9b83b4fa7d933c8950dfd.jpg" style="width:171px;height:220px;">
+2014-15赛季，2014年12月26日，公牛在主场113-93击退洛杉矶湖人。本场比赛，德里克·罗斯上场32分钟，14投7中得到20分6个助攻， [104]  这是他自2012年4月9日以来首次连续三场得分达到20分，也是在那一年季后赛首轮他遭遇了膝盖十字韧带撕裂。在前两场对奇才和猛龙的比赛中，罗斯分别得到25分和29分。
+2014年12月13日，公牛主场以115-106开拓者。罗斯全场24投14中，贡献31分5次助攻，整个第四节，罗斯个人抢下10分，包括那记价值连城的关键球。 [105] 
+2014年12月24日，公牛在客场以99比91击败了奇才，罗斯出场不到30分钟，17投10中砍下25分4个助攻。自沃尔入行以来，罗斯堪称是沃尔克星，因为膝盖伤势曾长期养伤，本场之前罗斯跟沃尔只交手过4次，但这4次罗斯以压倒性的优势占据上风。4场比赛，罗斯场均砍下25.8分8个助攻，沃尔场均得到15.5分7.3次助攻，命中率对比罗斯的42.3%对沃尔的41.4%也占优势。这四次交手，沃尔的得分从来没有一次压过罗斯，最惨的一次是在2011年2月底，当时他打了接近39分钟14投只有3中只得到9分。而且这4场比赛，沃尔的奇才全部告负。 [106] 
+2015年1月15日，公牛99-105奇才。德里克-罗斯三分球9投6中，单节送出17分，并贡献一个半场压哨三分。罗斯拿下了32分5次助攻。 [107] 
+2015年1月17日，坐镇主场的凯尔特人迎来公牛的登门造访，公牛末节打出净胜16分的攻势一举锁定胜局。德里克-罗斯表现抢眼，全场贡献29分10次助攻2次封盖。 [108] 
+2015年1月18日，公牛以99-107老鹰，在本场比赛中，德里克·罗斯上场37分钟，三分球10投4中，得到23分8篮板10助攻。这也是罗斯职业生涯首次连续三场至少投进4个三分球。在之前了两场比赛里，罗斯三分球分别为9投6中，8投5中，命中率高达66.7%，62.5%。
+2015年1月23日, 公牛在主场以104-81大胜马刺。德里克-罗斯出场28分钟16投9中送出22分5次助攻。 [109] 
+2015年1月28日，勇士主场加时以111-113不敌公牛。罗斯30分7篮板1封盖，终场7秒后撤步跳投绝杀勇士。结束了勇士主场的19连胜。 [110] 
+2015年2月13日，芝加哥公牛在主场以113-98大胜克利夫兰骑士。公牛当家球星德里克-罗斯砍下30分，外加4篮板7助攻，并在攻防两端都展现出了很强的统治力。 [111-113] 
+2015年2月25日，伤病再一次降临，又是右膝半月板的伤势。罗斯先是感觉自己的右膝有些疼，于是他随即接受了核磁共振的检查。检查结果非常糟糕，罗斯被诊断为右膝内侧半月板撕裂，将不得不接受手术治疗。预计4-6周后复出。 [114] 
+2015年4月9日，公牛队客场103-105魔术。德里克·罗斯因膝伤在休息了近六周后完成复出，在出场19分钟的时间里，得到9分2次助攻。 [115] 
+2015年4月12日，公牛主场114-107力克76人。罗斯22分6板8助，末节关键时间连着3球锁定胜局，成为主队奏凯的最大功臣。 [116] 
+2015年4月19日，罗斯3年来首次参加季后赛，率队取得开门红，全场出战27分钟16投9中，贡献23分7助攻2抢断1封盖。 [117] 
+2015年4月24日，公牛通过双加时以113-106击败雄鹿。德里克-罗斯全场出战48分钟拿到34分5篮板8助攻3抢断全能表现，5记三分也刷新个人季后赛三分球记录。 [118] 
+2015年5月5日，公牛在客场以99-92击败骑士，罗斯领军公牛取得东部半决赛首战的胜利。德里克-罗斯拿下了25分、5个篮板和5次助攻。 [119] 
+2015年5月9日，东部半决赛，芝加哥公牛99-96克里夫兰骑士，罗斯拿下全场最高分30分7个篮板和7次助攻1抢断1盖帽，终场压哨绝杀打板三分。26年前的5月8日，乔丹也是在骑士主场完成了著名的压哨绝杀，那记“the shot”成了大神经典时刻之一。就在这个经典时刻26年周年纪念日的后一天，罗斯用一记同样的压哨绝杀完成了致敬。这也是他季后赛生涯第10次拿到30+得分，在公牛队史排名第三。 [120] 
+2015年5月11日，NBA东部半决赛第4场，公牛队84-86骑士队，大比分改写为2-2，罗斯出战41分19秒得到全场最高分31分4助攻。最后8.4秒，罗斯扛着詹姆斯双手阻挡，上篮帮助公牛队将比分追平。公牛一度领先11分，但这一场绝杀换成了骑士队。公牛队上一次有人在季后赛连续2场打出30+得分的表现还是2010-11赛季的时间。而创造者也是罗斯。 [121] 
+2015年12月17日，公牛主场98-85战胜灰熊，本场比赛中，公牛后卫德里克-罗斯出场33分钟19投9中得到19分2篮板5助攻，算上本场比赛，他已经连续11场比赛得分没有超过20分，创下了个人单赛季得分不过20分的连续场次纪录。 [122] 
+2015年12月19日，公牛同活塞的比赛激战四加时终分胜负，活塞以147-144战胜了公牛。此役，公牛球员德里克-罗斯登场54分钟得到了34分4篮板8助攻，吉米-巴特勒登场56分钟得到了43分8篮板2助攻，保罗-加索尔登场48分钟得到了30分15篮板5助攻，这是自1996年的迈克尔-乔丹、斯科蒂-皮蓬以及托尼-库科奇之后，公牛第二组能够全部得分上30的三人组。 [123] 
+2016年2月6日，公牛客场以110-115不敌掘金，德里克-罗斯全场打了35分钟，拿到了30分9篮板8助攻1抢断，这是罗斯NBA职业生涯首次单场比赛拿到至少30分9篮板8助攻。 [124] 
+<body><p><span style="font-size:25px;">尼克斯时期</span></p>
 
-  
+2016年6月23日，公牛和尼克斯达成重磅交易。公牛送出德里克·罗斯、贾斯汀·霍乐迪和1个2017年的二轮选秀权，换来罗宾-洛佩斯、杰里安-格兰特以及何塞·卡尔德隆。 [4] 
+2017年1月19日，尼克斯在客场以117-106战胜了凯尔特人。德里克·罗斯本场比赛发挥出色。他上场33分钟，得到了30分10个篮板5个助攻。这是他生涯第二次拿到至少30分10个篮板5个助攻的数据。 [125] 
+2017年4月3日，德里克·罗斯因左膝半月板撕裂将会缺席本赛季剩余的比赛，随后尼克斯官方确认了这一消息。 [126] <img class="picture" alt="尼克斯时期" src="https://gss0.bdstatic.com/-4o3dSag_xI4khGkpoWK1HF6hhy/baike/s%3D220/sign=c5cb05c19182d158bf825eb3b00b19d5/0ff41bd5ad6eddc4451837d434dbb6fd52663325.jpg" style="width:220px;height:146px;">
+<body><p><span style="font-size:25px;">骑士时期</span></p>
+  2017年7月25日，自由球员德里克·罗斯和克利夫兰骑士队已经达成了一份1年210万美元的合同，加盟骑士队。 [5] 
+2018年2月9日，爵士官方宣布在与骑士和国王的三方交易中得到杰·克劳德和德里克·罗斯，并将罗德尼·胡德送至骑士，将乔·约翰逊送至国王。 [127] 
+2018年2月11日，犹他爵士队官方宣布他们已经裁掉了德里克·罗斯。<img class="picture" alt="骑士时期" src="https://gss0.bdstatic.com/94o3dSag_xI4khGkpoWK1HF6hhy/baike/s%3D220/sign=b467eb7f39a85edffe8cf921795409d8/c9fcc3cec3fdfc039a136197d93f8794a4c226b1.jpg" style="width:220px;height:191px;">
+<body><p><span style="font-size:25px;">森林狼时期</span></p>
+  2018年3月9日，明尼苏达森林狼队宣布跟德里克-罗斯签约至赛季结束。 [6] 
+
+<img class="picture" alt="森林狼时期" src="https://gss3.bdstatic.com/-Po3dSag_xI4khGkpoWK1HF6hhy/baike/s%3D220/sign=fb58726c01f3d7ca08f63874c21ebe3c/ac345982b2b7d0a26f8e31cfc6ef76094b369a18.jpg" style="width:220px;height:202px;">
+2018年7月1日，森林狼队以一年210万美元的合同续约德里克·罗斯。 [129] 
+2018年10月21日，森林狼136-140负于独行侠，德里克·罗斯出场32分钟，21投11中得到28分5篮板5助攻2抢断1盖帽，在2017年1月19日后首次得到28+5+5的数据。 [130] 
+2018年10月25日，森林狼与猛龙的比赛中，德里克·罗斯替补登场。加上这1场之后，罗斯职业生涯常规赛总出场数已经达到500。 [131] 
+2018年11月1日，森林狼在主场以128-125击败了爵士，德里克·罗斯爆发，砍下了生涯新高50分，还有6次助攻，4个篮板，2个抢断和关键的一个盖帽。据官方统计，罗斯成为继凯文·乐福、科里·布鲁尔、莫·威廉姆斯和卡尔-安东尼·唐斯后，森林狼队史第5位单场得到至少50分的球员。赛后，罗斯留下了激动的泪水。 [132-135] 
+<img class="picture" alt="罗斯的50分之夜" src="https://gss1.bdstatic.com/-vo3dSag_xI4khGkpoWK1HF6hhy/baike/s%3D220/sign=9c8032ad3bd3d539c53d08c10a86e927/d4628535e5dde711c58551a5aaefce1b9d166109.jpg" style="width:141px;height:220px;">
+2018年11月8日，湖人坐镇主场以114-110战胜森林狼，本场比赛森林狼球员德里克·罗斯得到31分，其中三分球9投7中，7记三分刷新个人生涯三分命中数纪录。此前罗斯的三分命中数记录是6个。在当地时间2011年3月22日公牛战胜老鹰，2013年11月16日公牛战胜步行者以及2015年1月14日公牛不敌奇才的比赛中，罗斯都命中了6记三分。 [136] 
+2019年1月16日，今天明尼苏达森林狼队与费城76人的比赛正在进行中，森林狼后卫德里克·罗斯出场19分钟已经得到12分，在得到这12分之后，罗斯职业生涯常规赛总得分已经达到并且超越10000分 [137]  ；21日，森林狼116-114击败太阳，德里克·罗斯出场37分钟，24投12中得到31分4篮板3助攻，并在终场前0.6秒命中中投，绝杀对手 [138]  ；3月10日，NBA常规赛罗斯得到29分 [139] 。
+<body><p><span style="font-size:25px;">国家队经历</span></p>
+  2010年，德里克·罗斯领衔美国梦九队，参加了2010男篮世锦赛，带领美国男篮获得金牌。 [21] 
+2012年，德里克·罗斯因十字韧带撕裂而缺席伦敦奥运会。 [140] 
+<img class="picture" alt="罗斯在美国国家队" src="https://gss0.bdstatic.com/94o3dSag_xI4khGkpoWK1HF6hhy/baike/s%3D220/sign=80f0f8438a18367aa98978df1e728b68/4e4a20a4462309f7a0f398787e0e0cf3d7cad63f.jpg" style="width:220px;height:155px;">
+2014年，德里克·罗斯因伤病缺席四年，再次参加美国男篮世界杯，并带领美国队获得金牌。 [22] 
+<body><p><span style="font-size:25px;">生涯数据</span></p>
+  <body><p><span style="font-size:30px;">选秀数据</span></p>
+    身高1米91，臂展2米03，原地摸高2米50，弹跳1.02米（40英寸），84公斤卧推10次，禁区往返跑11.69秒，3/4场冲刺3.05秒，体脂肪率4.6%。 [23] 
+    <body><p><span style="font-size:30px;">高中数据</span></p>
+      
+
+
+
+
+
 </html>
