--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 
-<html> 
   <head> 
     <meta charset="utf-8">
     <title>德里克.罗斯-NBA史上最年轻的MVP</title> 
-    <mata name="description" content="德里克.罗斯-NBA史上最年轻的MVP"
+    <mata name="description" content="德里克.罗斯-NBA史上最年轻的MVP">
     </head> 
   <body> 
   <p><a href="https://baike.baidu.com/item/%E5%BE%B7%E9%87%8C%E5%85%8B%C2%B7%E7%BD%97%E6%96%AF/2862891?fr=aladdin"<span style="font-size:35px; target="_blank"><p align="center">德里克.罗斯</p> </a>
-  
-  </body> 
   <p>生涯及其介绍:德里克·罗斯（Derrick Rose），1988年10月4日出生于美国伊利诺伊州芝加哥，美国职业篮球运动员，司职控球后卫，绰号“风城玫瑰”，效力于NBA明尼苏达森林狼队。
 德里克·罗斯在2008年NBA选秀中于首轮第1顺位被芝加哥公牛队选中，新秀赛季当选NBA年度最佳新秀并夺得NBA全明星技巧挑战赛冠军，2009-10赛季入选NBA全明星替补阵容。2010-11赛季，22岁的罗斯荣膺NBA常规赛最有价值球员（MVP），成为NBA历史上最年轻的MVP，该赛季入选NBA最佳阵容一阵和NBA全明星赛首发阵容。2011-12赛季再度入选NBA全明星赛首发阵容。2016年6月23日被交易至纽约尼克斯队，2017年7月25日加盟克利夫兰骑士队，2018年3月9日加盟明尼苏达森林狼队。 
 2011年，NBA新劳资协议中增加“罗斯条款”，以使符合条件的优秀年轻球员能够更早地获得占据球队工资帽30%的顶薪合同。  </p>
@@ -21,5 +18,7 @@
   <div style="position:fixed;bottom:5px;right:5px;opacity:1;cursor:pointer;">     
     <a href="#">       
     <img src="2.jpg"></a></div>
+  </body> 
+  
 
     <html>
